# profile

./: .emacs  .gitignore  .gitmodules  .profile  .zprofile  .zshenv  pyproject.toml
.config/: asdf-versions  asdfrc  editorconfig  pypoetry  terraformrc
.config/alacritty/: alacritty.yml
.config/awesome/: autorun.sh  rc.lua
.config/awesome/themes/homestead/: theme.lua
.config/bat/: config
.config/chemacs/: profiles.el
.config/dirmngr/: dirmngr.conf
.config/emacs/: emacs-profile  init.el
.config/git/: config
.config/gnupg/: gpg-agent.conf  gpg.conf
.config/npm/: npmrc
.config/p3/: 00-core.sh  10-cc.sh  10-xdg.sh  12-awk.sh  15-arch.sh  15-bat.sh  15-man.sh  15-qt.sh  15-systemctl.sh  17-openssl.sh  20-git.sh  20-gnupg.sh  20-mu.sh  20-ssh.sh  25-pass.sh  30-colors.sh  30-flatpak.sh  30-git.sh  30-zsh.sh  35-asdf.sh  40-go.sh  40-java.sh  40-lua.sh  40-node.sh  40-ocaml.sh  40-python.sh  40-ruby.sh  40-rust.sh  40-vim.sh  50-talisman.sh  60-wine.sh  70-cookiecutter.sh  70-fasd.sh  80-ledger.sh  98-emacs.sh  99-doom.sh  99-emacsen.sh  99-terraform.sh  99-tmux.sh  99-vultr.sh
.config/pacman/: makepkg.conf
.config/profile/: 20-util.sh  20-vars.sh  21-modernish.sh  30-colors.sh  30-pacaur.sh  30-zsh.sh  35-aliases.sh  40-node.sh  40-ruby.sh  40-vim.sh  asdf.sh  base16.sh  colors.sh  go.sh  modernish.sh  nvm.sh  pacaur.sh  rust.sh  tmux.sh  util.sh  vars.sh  vim.sh  virtualenv.sh  zsh.sh
.config/pypoetry/: config.toml
.config/rofi/: config.rasi
.config/yay/: config.json
.config/zsh/: .zprofile  .zshenv  .zshrc
