[tool.poetry]
name = "luwum"
version = "0.1.0"
description = ""
authors = ["Idigo Luwum"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
poetry-core = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
python-language-server = {extras = ["all"], version = "^0.36.1"}
isort = "^5.6.4"
pytest = "^6.1.2"
nose = "^1.3.7"
pyls-mypy = "^0.1.8"
pyls-black = "^0.4.6"
pyls-isort = "^0.2.0"
tox-pyenv = "^1.1.0"
bandit = "^1.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
